# QT_Slideshow

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
components/: ChooseFilesDialog.cpp  ChooseFilesDialog.h  ChooseFilesDialog.ui
components/ChooseFilesDialog/: ChooseFilesDialog.cpp  ChooseFilesDialog.h  ChooseFilesDialog.ui
components/SlideshowWindow/: SlideshowWindow.cpp  SlideshowWindow.h  SlideshowWindow.ui
controller/: SlideshowController.cpp  SlideshowController.h
interfaces/: Observer.h  Subject.h
model/: ImageList.cpp  ImageList.h
tests/: CMakeLists.txt  ImageList.cpp  ObserverPattern.cpp  SlideshowController.cpp  run_tests.cpp
utils/: utils.cpp  utils.h
